# twscrape-twitter-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  fly.toml  pyproject.toml  railway.json  server.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
examples/: claude_mcp_config.json
src/twscrape_twitter_mcp/: __init__.py  auth.py  cli.py  config.py  formatters.py  pool.py  server.py
tests/: test_auth.py  test_formatters.py  test_parse_id.py
